<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:padding="20dp">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/tabian_consulting_logo"
                android:contentDescription="@string/tabian_consulting_logo"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>



            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginTop="20dp"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                />

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/sign_in"
                android:textStyle="bold"
                android:background="@drawable/blue_button"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relLayout1">


                <TextView android:id="@+id/link_register"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="20dp"
                          android:text="@string/register"
                          android:gravity="center"
                          android:textSize="16sp"
                          android:textColor="@color/linkBlue"
                          android:layout_centerHorizontal="true"/>


                <TextView android:id="@+id/forgot_password"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="20dp"
                          android:text="@string/forgot_password"
                          android:gravity="center"
                          android:textSize="16sp"
                          android:textColor="@color/linkBlue"
                          android:layout_below="@+id/link_register"
                          android:layout_centerHorizontal="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/forgot_password"
                    android:id="@+id/resend_verification_email"
                    android:text="@string/resend_verification_email"
                    android:textSize="16sp"
                    android:textColor="@color/linkBlue"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:visibility="invisible"/>

</RelativeLayout>