<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:padding="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textSize="21sp"
        android:textColor="@color/Black"
        android:id="@+id/dialogTitle"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialogTitle"
            android:hint="@string/email"
            android:id="@+id/email_password_reset"
            android:inputType="textEmailAddress"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:textColor="@color/Black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/linkBlue"
            android:text="@string/confirm"
            android:layout_alignParentRight="true"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="30dp"
            android:id="@+id/dialogConfirm"
            android:layout_below="@+id/email_password_reset"/>


</RelativeLayout>