<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/blue4"
                app:elevation="10dp"
                android:elevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:id="@+id/create"
                       android:text="@string/create"
                       android:layout_alignParentEnd="true"
                       android:layout_alignParentRight="true"
                       android:layout_centerVertical="true"
                       android:textColor="@color/White"
                       android:layout_marginRight="15dp"
                       android:layout_marginEnd="15dp"
                       android:textSize="15sp"
                       android:background="?android:attr/selectableItemBackground">
                   </TextView>


                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_close_white"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:id="@+id/close"
                        android:background="?android:attr/selectableItemBackground"/>


                </RelativeLayout>

            </android.support.v7.widget.Toolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:layout_marginTop="10dp">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/assign_to_project"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/assign_to_project"/>

            </LinearLayout>


            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/issue_type_spinner"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp">

            </Spinner>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/name_wrapper">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:id="@+id/issue_summary"
                        android:imeOptions="actionNext"
                        android:hint="@string/summary"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/description_wrapper"
                    >


                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:id="@+id/issue_description"
                        android:imeOptions="actionDone"
                        android:hint="@string/description"
                        android:background="@null"
                        android:textSize="13sp"
                        android:layout_marginTop="5dp"/>

                </android.support.design.widget.TextInputLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:textColor="@color/darkGrey"
                        android:text="@string/priority"
                        />

                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/priority_spinner">

                    </Spinner>


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:id="@+id/progress_bar"/>
    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>